testsuite/tests/typecheck/should_compile/T9569a.stderr

T9569a.hs:10:6: error:
    • Couldn't match type ‘Int -> Int’ with ‘forall a. a -> a’
      Expected type: (forall a. a -> a) -> Int
        Actual type: (Int -> Int) -> Int
    • In the expression: g
      In an equation for ‘f1’: f1 = g
